Actividad1 de la Unidad 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DMoviles</string>
     <string name="nombre"></string>
+    <string name="NoCuenta">409004021</string>
 </resources>
